--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -153,7 +153,10 @@
             android:name="douya.item.ui.ItemIntroductionActivity"
             android:label="@string/item_introduction_title"
             android:theme="@style/Theme.Douya.Light.DialogWhenLarge" />
-
+        <activity
+            android:name="douya.item.ui.TableOfContentsActivity"
+            android:label="@string/item_table_of_contents_title"
+            android:theme="@style/Theme.Douya.Light.DialogWhenLarge" />
         <activity
             android:name="douya.calendar.ui.CalendarActivity"
             android:label="@string/calendar_title"
